2003-04-22  Theodore A. Roth  <troth@openavr.org>

	* configure.in (AM_INIT_AUTOMAKE): Bump version.

2003-04-22  Joerg Wunsch <j.gnu@uriah.heep.sax.de>

	* include/stdlib.h: strtod() is now tested.

2003-04-17  Theodore A. Roth  <troth@openavr.org>

	* configure.in (AM_INIT_AUTOMAKE): Bump version.
	* avr-libc.spec.in: Rpm in RedHat-9 is stripping avr binaries when it
	has no business doing so. Disable the install post scriptlet to stop
	this behaviour.

2003-04-14  Theodore A. Roth  <troth@openavr.org>

	* include/avr/ioat94k.h: Add comment to signal defs noting official
	ATMEL names.
	[Contributed by Thibaud Gaillard <thibaud.gaillard@free.fr>]

2003-04-14  Theodore A. Roth  <troth@openavr.org>

	* configure.in (AM_INIT_AUTOMAKE): Bump version.
	* include/avr/ioat94k.h: Add missing register bit definitions.
	[Contributed by Thibaud Gaillard <thibaud.gaillard@free.fr>]

2003-04-12  Marek Michalkiewicz  <marekm@amelek.gda.pl>

	* common/macros.inc: Check __AVR_MEGA__, not FLASHEND [Bug #3184].
	* configure.in (AM_INIT_AUTOMAKE): Bump version.

2003-04-08  Theodore A. Roth  <troth@openavr.org>

	* include/avr/iotn26.h: Add bit defines for USISR and USICR registers.
	[Contributed by Artur Lipowski <LAL@pro.onet.pl>]

2003-04-07  Theodore A. Roth  <troth@openavr.org>

	* include/avr/sleep.h: Add adc mode to sleep type 2 [Bug #3088].

2003-04-07  Joerg Wunsch <j.gnu@uriah.heep.sax.de>

	* doc/api/faq.dox: add entry about RAM/variable overlap detection.

2003-04-03  Theodore A. Roth  <troth@openavr.org>

	* configure.in (AM_INIT_AUTOMAKE): Bump version.
	* include/avr/iotn26.h: Add missing port and bit definitions [Bug #3081]
	[Contributed by Artur Lipowski <LAL@pro.onet.pl>]

2003-03-30  Joerg Wunsch <j.gnu@uriah.heep.sax.de>

	* doc/api/assembler.dox: more explanation about intr. vectors.

2003-03-24  Theodore A. Roth  <troth@openavr.org>

	* configure.in (AM_INIT_AUTOMAKE): Bump version.

2003-03-17  Theodore A. Roth  <troth@openavr.org>
